Fix unread indicator overflow

--- a/lynx/static/lynx/css/output.css
+++ b/lynx/static/lynx/css/output.css
@@ -4386,6 +4386,11 @@ details.collapse summary::-webkit-details-marker {
   padding-right: 0px;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
